--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage" : ".",
+  "homepage": ".",
   "name": "url-shortening-api",
   "version": "0.1.0",
   "private": true,
@@ -16,6 +16,7 @@
     "formik": "^2.2.9",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
     "sweetalert2": "^11.4.8",
     "typescript": "^4.6.3",
